<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80ffffff"
    tools:context=".MusicControl">


    <ImageView
        android:id="@+id/Song_Cover"
        android:layout_width="190dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="253dp"
        android:contentDescription="@string/song_image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/song_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="345dp"
        android:fontFamily="@font/actor"
        android:gravity="center_horizontal"
        android:text="@string/song_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794" />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/actor"
        android:gravity="center_horizontal"
        android:text="@string/Artistname"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.420" />

    <SeekBar
        android:id="@+id/Volume"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:progressDrawable="@drawable/volumeseekbarprogress"
        android:thumb="@drawable/volumeseekbarthumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist_name"
        app:layout_constraintVertical_bias="0.121" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="279dp"
        android:layout_marginBottom="97dp"
        android:background="@drawable/ic_volume_mute_black_24dp"
        android:contentDescription="@string/volumedown"
        app:layout_constraintBottom_toTopOf="@+id/search"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="94dp"
        android:background="@drawable/ic_volume_up_black_24dp"
        android:contentDescription="@string/volumeup"
        app:layout_constraintBottom_toTopOf="@+id/Lyrics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/playpause"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="226dp"

        android:background="@drawable/musiccontrol_grey_play"
        android:contentDescription="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Song_Cover"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="226dp"
        android:background="@drawable/musiccontrol_grey_back"
        android:contentDescription="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playpause"
        app:layout_constraintHorizontal_bias="0.671"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/forward"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="226dp"
        android:background="@drawable/musiccontrol_grey_forward"
        android:contentDescription="@string/forward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toEndOf="@+id/playpause" />

    <ImageButton
        android:id="@+id/search"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="130dp"
        android:background="@drawable/musiccontrol_shuffle_black_24dp"
        android:contentDescription="@string/shuffle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageButton
        android:id="@+id/song_list"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="130dp"
        android:background="@drawable/musiccontrol_songs_list_"
        android:contentDescription="@string/song_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Lyrics"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Song_Cover" />

    <Button
        android:id="@+id/Lyrics"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="130dp"
        android:background="@drawable/lyrics_button"
        android:fontFamily="@font/actor"
        android:text="@string/lyrics"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/song_list"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <SeekBar
        android:id="@+id/songtime"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:progressDrawable="@drawable/volumeseekbarprogress"
        android:thumb="@drawable/volumeseekbarthumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/back_lib"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/ic_arrow_back_black_24dp"
        android:contentDescription="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/actor"
        android:text="@string/library"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="360dp"
        android:layout_marginBottom="72dp"
        android:text="@string/_0_00"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/stop_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="72dp"
        android:text="@string/_0_00"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>