<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/Scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >


            <TextView
                android:id="@+id/Library"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/actor"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="@string/library"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#2D2D2D"
                android:textSize="30sp"
                />
            <TableRow
                android:id="@+id/hr"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#80000000"


                />


            <TextView
                android:id="@+id/playlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/playlist"
                android:fontFamily="@font/actor"
                android:textColor="#2D2D2D"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"

                />
            <TableRow
                android:id="@+id/hr1"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#80000000"
                >

            </TableRow>

            <TextView
                android:id="@+id/Songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/songs"
                android:textColor="#2D2D2D"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"/>

            <TableRow
                android:id="@+id/hr2"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#80000000"
                />

            <TextView
                android:id="@+id/Downloded_songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/downloaded_music"
                android:textColor="#2D2D2D"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                />

            <TableRow
                android:id="@+id/hr3"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#80000000"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recently_added"
                android:textColor="#2D2D2D"
                android:textSize="25sp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textStyle="bold"
                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

