<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"

    >

    <ImageButton
        android:id="@+id/back_lib"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/ic_arrow_back_black_24dp"
        android:contentDescription="@string/back"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="37dp"
         android:layout_marginTop="2dp"
        android:fontFamily="@font/actor"
        android:textColor="#2D2D2D"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentTop="true"
        />


    <EditText
        android:id="@+id/search_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/search_bar"
        android:ems="15"
        android:hint="@string/search_here"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:textColor="#000000"
        android:fontFamily="@font/actor"
        android:textColorHint="#000000"
        android:textSize="16sp"
        android:inputType="text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/search_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/searc_btn_ripple"
        android:src="@drawable/ic_search_black_24dp"
        android:layout_marginStart="335dp"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:contentDescription="@string/search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_list"
        android:layout_width="match_parent"
        android:layout_height="535dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        />


</RelativeLayout>